test/spec_vectors/load/fail/module_47.wat
(module (memory 0) (func $type-address-empty-in-br (i32.const 0) (block (br 0 (i32.load)) (drop))))